--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     
     <div class="container">
-        <!-- <h1>Enter Task</h1> -->
+        <h1>To Do List</h1>
         <div class="listInput">
             <input type="text" class="data" id="inputTask" placeholder="To Do Title..." /> 
             <input type="text" class="data" id="inputDescription" placeholder="To Do Description...">
